kubernetes/apps/database/cloudnative-pg/admin/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pgadmin-dashboard
spec:
  hostnames: ["pgadmin.abchost.nl"]
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: pgadmin
          namespace: database
          port: 80
